# gazebo-simulation-autopatrol

./: README.md  系统总体架构图.drawio
autopatrol_interfaces/: CMakeLists.txt  package.xml
autopatrol_robot/: package.xml  setup.py
autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
autopatrol_robot/config/: patrol_config.yaml
fishbot_application/: package.xml  setup.py
fishbot_application/fishbot_application/: init_robot_pose.py
fishbot_description/: package.xml
fishbot_description/config/: display_robot_model.rviz  fishbot_ros2_controller.yaml
fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
fishbot_description/urdf/: first_robot.urdf  first_robot.xacro
fishbot_description/urdf/fishbot/: base.urdf.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
fishbot_description/urdf/fishbot/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
fishbot_description/world/: U_shaped_obstacle.world  bigger_room.world  bigger_room_without_person.world  narrow_corridor.world
fishbot_description/world/U_shaped_obstacle/: model.config  model.sdf
fishbot_description/world/bigger_room/: model.config  model.sdf
fishbot_description/world/narrow_corridor/: model.config  model.sdf
fishbot_description/world/room/: model.sdf
fishbot_navigation2/: package.xml
fishbot_navigation2/config/: nav2_params.yaml
fishbot_navigation2/launch/: navigation2.launch.py  slam_rviz.launch.py
fishbot_navigation2/maps/: U_shaped_obstacle.pgm  U_shaped_obstacle.yaml  bigger_room.pgm  bigger_room.yaml  narrow_corridor.pgm  narrow_corridor.yaml
fishbot_navigation2/rviz/: rrt_planner_view.rviz
nav2_custom_planner/: CMakeLists.txt  package.xml  rrt_adaptive_step_planner_plugin.xml  rrt_apf_guided_planner_plugin.xml  rrt_bspline_smooth_planner_plugin.xml  rrt_connect_auto_pruning_planner_plugin.xml  rrt_connect_planner_plugin.xml  rrt_connect_smooth_planner_plugin.xml  rrt_dynamic_biased_planner_plugin.xml  rrt_origin_planner_plugin.xml  rrt_pruning_planner_plugin.xml
nav2_custom_planner/include/nav2_custom_planner/: nav2_custom_planner.hpp  nav2_rrt_adaptive_step_planner.hpp  nav2_rrt_apf_guided_planner.hpp  nav2_rrt_bspline_smooth_planner.hpp  nav2_rrt_connect_auto_pruning_planner.hpp  nav2_rrt_connect_planner.hpp  nav2_rrt_connect_smooth_planner.hpp  nav2_rrt_dynamic_biased_planner.hpp  nav2_rrt_origin_planner.hpp  nav2_rrt_pruning_planner.hpp
nav2_custom_planner/src/: nav2_rrt_adaptive_step_planner.cpp  nav2_rrt_apf_guided_planner.cpp  nav2_rrt_bspline_smooth_planner.cpp  nav2_rrt_connect_auto_pruning_planner.cpp  nav2_rrt_connect_planner.cpp  nav2_rrt_connect_smooth_planner.cpp  nav2_rrt_dynamic_biased_planner.cpp  nav2_rrt_origin_planner.cpp  nav2_rrt_pruning_planner.cpp
person_control/: package.xml  setup.cfg  setup.py
person_control/person_control/: patrol.py
yolo_ros2_pkg/: package.xml  setup.cfg  setup.py
yolo_ros2_pkg/yolo_ros2_pkg/: yolo_node.py
