<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_custom_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_core</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/custom_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_origin_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_dynamic_biased_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_apf_guided_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_bspline_smooth_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_adaptive_step_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_pruning_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_connect_planner_plugin.xml" />
    <nav2_core plugin="${prefix}/rrt_connect_smooth_planner_plugin.xml" />
  </export>
</package>
